Add history and persistence features for track management
- Implement HistoryService to maintain a deduplicated history of played tracks, persisting to /app/data/history.json.
- Introduce PersistedTrack class for serializable track snapshots, excluding stream URLs.
- Enhance QueueService to support persistent track queue management.
- Update PlayerCoordinatorService to integrate history tracking and next track handling.
- Refactor Ts3EventListener to support new command aliases for play and queue commands.