@@ -1,7 +1,12 @@
 package com.example.tsbot.player;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
+import java.io.File;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
@@ -9,15 +14,44 @@ import java.util.List;
 @Service
 public class QueueService {
 
-    private final List<Track> queue = new LinkedList<>();
+    private static final Logger log = LoggerFactory.getLogger(QueueService.class);
+    private static final String QUEUE_FILE = "/app/data/queue.json";
+
+    private final LinkedList<Track> queue = new LinkedList<>();
+    private final ObjectMapper objectMapper = new ObjectMapper();
+
     private Track nowPlaying;
 
+    public QueueService() {
+        loadFromDisk();
+    }
+
+    /** Adds {@code track} to the end of the queue, or sets it as now-playing if idle. */
     public synchronized void add(Track track) {
         if (nowPlaying == null) {
             nowPlaying = track;
         } else {
-            queue.add(track);
+            queue.addLast(track);
+            persist();
         }
+    }
+
+    /** Inserts {@code track} at the front of the queue so it plays next, or plays immediately if idle. */
+    public synchronized void addNext(Track track) {
+        if (nowPlaying == null) {
+            nowPlaying = track;
+        } else {
+            queue.addFirst(track);
+            persist();
+        }
+    }
+
+    /**
+     * Replaces the now-playing reference in-place. Used after a restored track
+     * (null streamUrl) has been re-resolved to avoid identity mismatches.
+     */
+    public synchronized void updateNowPlaying(Track track) {
+        this.nowPlaying = track;
     }
 
     public synchronized Track getNowPlaying() {
@@ -36,24 +70,60 @@ public class QueueService {
         return nowPlaying == null;
     }
 
+    /** Moves the queue head to now-playing and returns it, or returns {@code null} if the queue is empty. */
     public synchronized Track skip() {
         if (queue.isEmpty()) {
             nowPlaying = null;
             return null;
         }
-
-        nowPlaying = queue.remove(0);
+        nowPlaying = queue.removeFirst();
+        persist();
         return nowPlaying;
     }
 
-    // 🔹 NEW: only clears upcoming tracks
+    /** Clears upcoming tracks while leaving the current track playing. */
     public synchronized void clearQueue() {
         queue.clear();
+        persist();
     }
 
-    // 🔹 NEW: full stop (used by !stop)
+    /** Stops all playback — clears both the queue and now-playing state. */
     public synchronized void stop() {
         queue.clear();
         nowPlaying = null;
+        persist();
+    }
+
+    // -------------------------------------------------------------------------
+
+    private void persist() {
+        try {
+            List<PersistedTrack> snapshot = new ArrayList<>(queue.size());
+            for (Track t : queue) {
+                snapshot.add(PersistedTrack.from(t));
+            }
+            File file = new File(QUEUE_FILE);
+            File parent = file.getParentFile();
+            if (parent != null && !parent.exists()) {
+                parent.mkdirs();
+            }
+            objectMapper.writerWithDefaultPrettyPrinter().writeValue(file, snapshot);
+        } catch (Exception e) {
+            log.warn("Failed to persist queue to {}", QUEUE_FILE, e);
+        }
+    }
+
+    private void loadFromDisk() {
+        File file = new File(QUEUE_FILE);
+        if (!file.exists()) return;
+        try {
+            List<PersistedTrack> persisted = objectMapper.readValue(file, new TypeReference<List<PersistedTrack>>() {});
+            for (PersistedTrack pt : persisted) {
+                queue.addLast(pt.toTrack());
+            }
+            log.info("Restored {} queued tracks from {}", queue.size(), QUEUE_FILE);
+        } catch (Exception e) {
+            log.warn("Failed to load queue from {}", QUEUE_FILE, e);
+        }
     }
 }
